# react-native-nitro-ark

./: .clang-format  .gitignore  Cargo.toml  README.md  build.rs  db.sqlite  flake.nix  justfile
.github/workflows/: build_test.yml  release.yml
.zed/: settings.json
bark-cpp/: Cargo.toml  README.md  bark-cpp.h  build-android.sh  build-ios-ci.sh  build-ios-local.sh  build-ios.sh  build.rs  cbindgen.toml
bark-cpp/.zed/: settings.json
bark-cpp/src/: cxx.rs  ffi.rs  ffi_2.rs  ffi_utils.rs  lib.rs  main.rs  onchain.rs  tests.rs  utils.rs
bark-cpp/src/libsql/: convert.rs  mod.rs  query.rs
bark-cpp/src/libsql/migrations/: m0001_initial_version.rs  m0002_config.rs  m0003_payment_history.rs  m0004_unregistered_board.rs  m0005_offchain_boards.rs  m0006_exit_rework.rs  m0007_vtxo_refresh_expiry_threshold.rs  m0008_fee_rate_implementation.rs  mod.rs
logger/: Cargo.toml
logger/src/: lib.rs
react-native-nitro-ark/: .gitignore  CONTRIBUTING.md  NitroArk.podspec  README.md  eslint.config.mjs  nitro.json  package.json  tsconfig.json
react-native-nitro-ark/.github/ISSUE_TEMPLATE/: config.yml
react-native-nitro-ark/Ark.xcframework/: Info.plist
react-native-nitro-ark/android/: CMakeLists.txt  build.gradle  gradle.properties
react-native-nitro-ark/android/src/main/: AndroidManifest.xml
react-native-nitro-ark/android/src/main/cpp/: NitroArkJni.cpp  cpp-adapter.cpp
react-native-nitro-ark/android/src/main/java/com/margelo/nitro/nitroark/: NativeTypes.kt  NitroArkNative.kt  NitroArkPackage.kt
react-native-nitro-ark/android/src/main/java/com/nitroark/: NitroArkPackage.kt
react-native-nitro-ark/cpp/: HybridArk.cpp  NitroArk.hpp  bark-cpp.h
react-native-nitro-ark/example/: Gemfile  README.md  app.json  jest.config.js  package.json
react-native-nitro-ark/example/android/: settings.gradle
react-native-nitro-ark/example/android/app/: build.gradle
react-native-nitro-ark/example/android/app/src/main/java/nitroark/example/: MainActivity.kt  MainApplication.kt  NitroArkDemoModule.kt  NitroArkDemoPackage.kt
react-native-nitro-ark/example/android/app/src/main/res/values/: strings.xml
react-native-nitro-ark/example/android/app/src/main/res/xml/: network_security_config.xml
react-native-nitro-ark/example/ios/: Podfile
react-native-nitro-ark/example/ios/ArkCxxBridge.xcframework/: Info.plist
react-native-nitro-ark/example/ios/ArkCxxBridge.xcframework/ios-arm64/Headers/: ark_cxx.h
react-native-nitro-ark/example/ios/ArkCxxBridge.xcframework/ios-arm64_x86_64-simulator/Headers/: cxx.rs.h
react-native-nitro-ark/example/ios/NitroArkExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
react-native-nitro-ark/example/ios/NitroArkExample.xcodeproj/: project.pbxproj
react-native-nitro-ark/example/ios/NitroArkExample.xcodeproj/xcshareddata/xcschemes/: NitroArkExample.xcscheme
react-native-nitro-ark/example/ios/NitroArkExample.xcworkspace/: contents.xcworkspacedata
react-native-nitro-ark/example/src/: App.tsx  components.tsx  constants.ts  types.ts
react-native-nitro-ark/example/src/tabs/: ReceiveTab.tsx  SendTab.tsx  WalletTab.tsx  index.ts
react-native-nitro-ark/src/: NitroArk.nitro.ts  index.tsx
scripts/: ark-dev.sh  captaind.toml  docker-compose.yml
scripts/postgres-initdb/: 01-create-noah-databases.sql
src/: ffi.rs  lib.rs  main.rs
