[package]
name = "bark-cpp"
version = "0.1.0"
edition = "2021"

[dependencies]
bark-client = { git = "https://codeberg.org/niteshbalusu/bark.git", branch = "bark-alpha-18", features = [
    "tls-webpki-roots",
], default-features = false }

bark-bitcoin-ext = { git = "https://codeberg.org/ark-bitcoin/bark.git", tag = "bark-0.0.0-alpha.18", default-features = false }
bdk_wallet = { version = "2.0.0" }
bdk_bitcoind_rpc = { version = "0.20.0" }

tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
bip39 = { version = "2.2.0", default-features = false }
anyhow = "1.0.98"
logger = { path = "../logger" }
serde = "1.0.219"
tonic = { version = "0.13.1", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
] }
serde_json = "1.0.140"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
name = "bark_cpp"
path = "src/lib.rs"

# Add these profile configurations
[profile.release]
opt-level = 's'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units
panic = 'abort'   # Remove panic unwinding code
strip = true      # Strip symbols from binary

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0"
