[package]
name = "logger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
log-panics = "2.1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"
