[package]
name = "logger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
